--- a/style/style.css
+++ b/style/style.css
@@ -14,9 +14,15 @@ body {
     background-color: #FFFFFF;
 }
 
-#itisme {
-    padding-top: calc(50vh - 2.5rem);
-    font-weight: 700;
-    text-align: center;
-    font-size: 5rem;
+.renamed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-family: Roboto, sans-serif;
+    font-size: 2em;
+    color: black;
 }
